--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "phonyland/generator-template",
-    "description": "\ud83d\udd39 Generator Template for \ud83d\ude43 Phony Framework",
+    "name": "phonyland/phony-generator-http",
+    "description": "HTTP Generator for \ud83d\ude43 Phony Framework",
     "license": "MIT",
     "type": "phony-generator",
     "keywords": [
@@ -32,12 +32,12 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Phonyland\\ExampleGenerator\\": "src/"
+            "Phonyland\\HttpGenerator\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Phonyland\\ExampleGenerator\\Tests\\": "tests"
+            "Phonyland\\HttpGenerator\\Tests\\": "tests"
         }
     },
     "config": {
@@ -54,8 +54,8 @@
     "extra": {
         "phonyland": {
             "generator": {
-                "alias": "example",
-                "class": "Phonyland\\ExampleGenerator\\ExampleGenerator"
+                "alias": "http",
+                "class": "Phonyland\\HttpGenerator\\HttpGenerator"
             }
         }
     },
